Dark Mode: Fix Actionable Message Error Text

--- a/ui/components/ui/actionable-message/index.scss
+++ b/ui/components/ui/actionable-message/index.scss
@@ -124,6 +124,7 @@
 
     .actionable-message__message {
       text-align: left;
+      color: var(--color-error-default);
     }
 
     .actionable-message__actions button {
